--- a/index.html
+++ b/index.html
@@ -1,4 +1,12 @@
 ---
-layout: home
-# Index page
+layout: page
+title: 사이트 안내
+permalink: /
+toc: false
 ---
+
+## 현재 사이트 준비중입니다.
+
+더 많은 치과 정보는 아래 블로그에서 먼저 확인하실 수 있습니다.
+
+[blog.naver.com/studytosurvive](https://blog.naver.com/studytosurvive)
