--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@ title: 사이트 안내
 permalink: /
 toc: false
 ---
-
-## 현재 사이트 준비중입니다.
-
-더 많은 치과 정보는 아래 블로그에서 먼저 확인하실 수 있습니다.
-
-[blog.naver.com/studytosurvive](https://blog.naver.com/studytosurvive)
+<h2>현재 사이트 준비중입니다.</h2>
+<p>더 많은 치과 정보는 아래 블로그에서 먼저 확인하실 수 있습니다.</p>
+<p>
+  <a href="https://blog.naver.com/studytosurvive" target="_blank" rel="noopener noreferrer"
+    >윤원장의 치과사전 네이버 블로그</a
+  >
+</p>
