Style maintenance notice with emoji and CTA button

--- a/index.html
+++ b/index.html
@@ -4,10 +4,26 @@ title: 사이트 안내
 permalink: /
 toc: false
 ---
-<h2>현재 사이트 준비중입니다.</h2>
-<p>더 많은 치과 정보는 아래 블로그에서 먼저 확인하실 수 있습니다.</p>
-<p>
-  <a href="https://blog.naver.com/studytosurvive" target="_blank" rel="noopener noreferrer"
-    >윤원장의 치과사전 네이버 블로그</a
-  >
-</p>
+
+<div style="max-width: 720px; margin: 2rem auto; padding: 2rem; border: 1px solid #dbeafe; border-radius: 18px; background: linear-gradient(135deg, #f0fdfa 0%, #eff6ff 100%); box-shadow: 0 12px 26px rgba(15, 23, 42, 0.08); text-align: center;">
+  <p style="font-size: 3rem; margin: 0 0 0.5rem;">🦷✨</p>
+  <h2 style="margin: 0.2rem 0 0.8rem; color: #0f172a;">현재 사이트 준비중입니다</h2>
+  <p style="margin: 0; color: #334155; line-height: 1.7;">
+    더 많은 치과 정보는 네이버 블로그에서 먼저 확인해주세요.
+  </p>
+
+  <p style="margin: 1.4rem 0 0;">
+    <a
+      href="https://blog.naver.com/studytosurvive"
+      target="_blank"
+      rel="noopener noreferrer"
+      style="display: inline-block; padding: 0.82rem 1.2rem; border-radius: 12px; background: #0f766e; color: #ffffff; text-decoration: none; font-weight: 700;"
+    >
+      📘 윤원장의 치과사전 네이버 블로그 바로가기
+    </a>
+  </p>
+
+  <p style="margin: 0.9rem 0 0; font-size: 0.92rem; color: #64748b;">
+    blog.naver.com/studytosurvive
+  </p>
+</div>
